# novelquick

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/admin/: next.config.ts  package.json
apps/admin/src/app/: error.tsx  globals.css  layout.tsx
apps/admin/src/app/(admin)/: layout.tsx  page.tsx
apps/admin/src/app/(admin)/audit/: page.tsx
apps/admin/src/app/(admin)/comments/: page.tsx
apps/admin/src/app/(admin)/dramas/: page.tsx
apps/admin/src/app/forbidden/: page.tsx
apps/admin/src/app/sign-in/: page.tsx
apps/admin/src/components/: image-upload-field.tsx  sidebar.tsx
apps/admin/src/lib/: auth-client.ts
apps/admin/src/lib/trpc/: client.tsx  server.ts
apps/mobile/: README.md  package.json
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: .gitkeep
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/public/: manifest.webmanifest
apps/web/src/app/: error.tsx  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
apps/web/src/app/(consumer)/: layout.tsx  page.tsx
apps/web/src/components/: bottom-nav.tsx  check-in-card.tsx  footer.tsx  theme-toggle.tsx
apps/web/src/components/feed/: feed-card.tsx  vertical-feed.tsx
apps/web/src/components/player/: hls-video.tsx
apps/web/src/lib/: auth-client.ts
apps/web/src/lib/trpc/: client.tsx
services/transcoder/: package.json
services/transcoder/src/: index.ts
(+43 files in other folders)
