[package]
name = "novelquick-mobile"
version = "0.1.0"
description = "NovelQuick mobile shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "novelquick_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
